--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "server": "json-server --watch ./src/app/data/data.json --port=3001",
+    "start-all": "concurrently \"yarn start\" \"yarn server\"",
     "test": "ng test"
   },
   "private": true,
@@ -18,6 +20,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "concurrently": "^7.4.0",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
